# api/openapi.yml
@@ -97,6 +97,26 @@ components:
         status:
           type: string
       type: object
+    ReviewDto:
+      properties:
+        author:
+          type: string
+        id:
+          type: integer
+        position:
+          type: string
+        text:
+          type: string
+      type: object
+    ReviewRequestDto:
+      properties:
+        author:
+          type: string
+        position:
+          type: string
+        text:
+          type: string
+      type: object
   securitySchemes:
     Bearer:
       description: 'Формат: `Bearer {token}`'
@@ -553,6 +573,176 @@ paths:
       summary: Обновить статус стажировки
       tags:
       - admin
+  /admin/review:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReviewRequestDto'
+              description: Отзыв
+              summary: review
+        description: Отзыв
+        required: true
+      responses:
+        "201":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReviewDto'
+          description: Created
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Unauthorized
+        "422":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Unprocessable Entity
+      security:
+      - Bearer: []
+      summary: Создать отзыв
+      tags:
+      - admin
+  /admin/review/{id}:
+    delete:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Not Found
+      security:
+      - Bearer: []
+      summary: Удалить отзыв
+      tags:
+      - admin
+    patch:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReviewRequestDto'
+              description: Отзыв
+              summary: review
+        description: Отзыв
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReviewDto'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Not Found
+        "422":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Unprocessable Entity
+      security:
+      - Bearer: []
+      summary: Обновить отзыв
+      tags:
+      - admin
+    put:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReviewRequestDto'
+              description: Отзыв
+              summary: review
+        description: Отзыв
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReviewDto'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Unauthorized
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Not Found
+        "422":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Unprocessable Entity
+      security:
+      - Bearer: []
+      summary: Обновить отзыв
+      tags:
+      - admin
   /faq:
     get:
       responses:
@@ -682,5 +872,50 @@ paths:
       summary: Получить стажировку по ID
       tags:
       - internship
+  /review:
+    get:
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/ReviewDto'
+                type: array
+          description: OK
+      summary: Получить все отзывы
+      tags:
+      - review
+  /review/{id}:
+    get:
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        schema:
+          type: integer
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReviewDto'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Bad Request
+        "404":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIError'
+          description: Not Found
+      summary: Получить отзыв по ID
+      tags:
+      - review
 servers:
 - url: /api/v1
